# MoleHole

./: .clang-tidy  .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  EXPORT_FEATURE.md  EXPORT_UI_GUIDE.md  FINAL_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MULTITHREADING_PLAN.md  README.md
.github/: copilot-instructions.md
assets/config/: base_objects.yaml  classes.yaml  parameters.yaml
assets/models/star_trek_online__u.s.s._enterprise_kelvin/: license.txt  scene.gltf
docs/ji_documentation/: backup  introduction.tex  main.blg  main.tex  packages.tex  project_documentation.tex  project_execution_outlook.tex  project_origin_and_planning.tex  references.bib  report.tex  use_of_ai.tex
docs/paper/: acronyms.tex  build.sh  main.tex  references.bib
docs/paper/chapters/: math_theory.tex  physical_theory.tex  rendering_theory.tex
docs/paper/tmp/: SNmult.cls  acknowledgement.aux  acronym.aux  appendix.aux  author.aux  author.tex  contriblist.aux  contriblist.tex  dedication.aux  editor.aux  editor.idx  editor.tex  editor.toc  foreword.aux  glossary.aux  history.txt  part.aux  preface.aux  readme.txt
docs/public/: development.md  papers.md
font/: LICENSE_FONTAWESOME.txt
scripts/: cmake_paths.cmake  compiler_flags.cmake  dependencies.cmake  ffmpeg.cmake  physx.cmake  platform.cmake  setup.py  vulkan.cmake
shaders/: black_hole_rendering.comp  black_hole_visual_display.frag  blackhole_display.frag  blackhole_display.vert  blackhole_raytrace.comp  bloom_blur.comp  bloom_extract.comp  circle.frag  circle.vert  common_structures.glsl  crosshair.glsl  disk.glsl  doppler.glsl  fxaa.comp  gradient.frag  gradient.vert  intro_planet.frag  intro_text.frag  intro_text.vert  kerr.glsl  kerr_lut_debug.frag  kerr_lut_generator.comp  lens_flare.comp  lut_loader.glsl  mesh.frag  mesh.vert  noise.glsl  object_paths.frag  object_paths.vert  physics.glsl  physics_debug_line.frag  physics_debug_line.vert  physics_debug_triangle.frag  physics_debug_triangle.vert  plane_grid.frag  plane_grid.vert  quad.frag  quad.vert  ray_tracing.glsl  sdf.glsl  (+6 more)
shaders/rt/: closesthit.rchit  miss.rmiss  raygen.rgen
src/: FpsCounter.h  GlobalOptions.h  Image.cpp  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Simulation.cpp  Simulation.h  main.cpp  mhpch.h
src/Application/: AnimationGraph.cpp  AnimationGraph.h  AppState.cpp  AppState.h  Application.cpp  Application.h  CommandLineArgs.cpp  CommandLineArgs.h  FpsCounter.h  IconsFontAwesome6.h  IntroAnimation.cpp  LinuxGtkInit.cpp  LinuxGtkInit.h  NodeBuilder.cpp  NodeBuilder.h  ParameterRegistry.cpp  ParameterRegistry.h  Parameters.h  Profiler.h  UI.cpp  UI.h  Window.h
src/Core/: Memory.cpp  Memory.h
src/MathTools/: IntegrationMethods.cpp  IntegrationMethods.h
src/Platform/GLFW/: GlfwWindow.cpp  Window.cpp  Window.h
src/Platform/Linux/: LinuxGtkInit.cpp  LinuxGtkInit.h
src/Platform/Vulkan/: ShaderUtils.cpp  ShaderUtils.h  VulkanAccelerationStructure.cpp  VulkanAccelerationStructure.h  VulkanApi.cpp  VulkanApi.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h  VulkanMemory.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRayTracingPipeline.cpp  VulkanRayTracingPipeline.h  VulkanRenderCommand.cpp  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSyncObjects.cpp  VulkanSyncObjects.h
src/Renderer/: AccelerationLUTGenerator.cpp  AccelerationLUTGenerator.h  BlackHoleRenderer.cpp  BlackHoleRenderer.h  BlackbodyLUTGenerator.cpp  BlackbodyLUTGenerator.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  ExportRenderer.cpp  ExportRenderer.h  GLTFMesh.cpp  GLTFMesh.h  GravityGridRenderer.cpp  GravityGridRenderer.h  HRDiagramLUTGenerator.cpp  HRDiagramLUTGenerator.h  Image.cpp  Image.h  Input.cpp  Input.h  KerrGeodesicLUTGenerator.cpp  KerrGeodesicLUTGenerator.h  KerrLookupTableManager.cpp  KerrLookupTableManager.h  ObjectPathsRenderer.cpp  ObjectPathsRenderer.h  PhysicsDebugRenderer.cpp  PhysicsDebugRenderer.h  RenderCommand.h  Renderer.cpp  Renderer.h  Screenshot.cpp  Screenshot.h  Shader.cpp  Shader.h  VisualRenderer.cpp  VisualRenderer.h
src/Renderer/API/: Buffer.cpp  Buffer.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  (+9 more)
src/Simulation/: GraphExecutor.cpp  GraphExecutor.h  Physics.cpp  Physics.h  Scene.cpp  Scene.h  Simulation.cpp  Simulation.h
src/Threading/: CommandTypes.h  ResourceLoader.cpp  ResourceLoader.h  SimulationThread.cpp  SimulationThread.h  ThreadManager.cpp  ThreadManager.h  ThreadSafeQueue.h  TripleBuffer.h  ViewportRenderThread.cpp  ViewportRenderThread.h
src/UI/: AnimationGraphWindow.cpp  AnimationGraphWindow.h  CameraWindow.cpp  CameraWindow.h  DebugWindow.cpp  DebugWindow.h  GeneralRelativityWindow.cpp  GeneralRelativityWindow.h  IconsFontAwesome6.h  IntroAnimation.cpp  IntroAnimation.h  LatexRenderer.cpp  LatexRenderer.h  NodeBuilder.cpp  NodeBuilder.h  ParameterWidgets.cpp  ParameterWidgets.h  RendererWindow.cpp  RendererWindow.h  SceneWindow.cpp  SceneWindow.h  ScienceWindow.cpp  ScienceWindow.h  SettingsPopUp.cpp  SettingsPopUp.h  SideBar.cpp  SideBar.h  SimulationWindow.cpp  SimulationWindow.h  TobBar.cpp  TopBar.cpp  TopBar.h  TutorialOverlay.cpp  TutorialOverlay.h  UI.cpp  UI.h  ViewportHUD.cpp  ViewportHUD.h  ViewportWindow.cpp  ViewportWindow.h
templates/: dev-scene.yaml  one-bh.yaml  parameters.yaml  scene-bh-orbit-01.yaml  scene-bh-test-01.yaml  scene-double-star-system-01.yaml  scene-double-star-system-02.yaml  scene-double-star-system-03.yaml  scene.yaml  scene001.yaml  scene2.yaml  scene3.yaml  scene4.yaml  scene5.yaml  scene6.yaml  test-scene.yaml
tests/: CMakeLists.txt
tests/benchmarks/: MathBenchmarks.cpp
tests/helpers/: TestHelpers.cpp  TestHelpers.h
tests/unit/: MathTests.cpp
(+65 files in other folders)
